# wetlandmapper

./: .gitignore  .readthedocs.yaml  CODEBASE_ANALYSIS.md  INSTALL.md  LICENSE  LINTING_SUMMARY.txt  PRE-COMMIT-SUMMARY.txt  README.md  TEST_COVERAGE_REPORT.md  TEST_COVERAGE_REPORT.txt  github  github.pub  paper.bib  paper.md  pyproject.toml
.github/workflows/: ci.yml  draft-pdf.yml  publish.yml
docs/: api.rst  conf.py  index.rst  installation.rst
jats/: paper.jats
notebooks/: demo_chilika_north_full_capabilities_xee.ipynb  demo_dem_depression_protocol.ipynb  demo_wetlandmapper.ipynb
notebooks/chilika/: Chilika.dbf  Chilika.shp  Chilika.shx
notebooks/chilika_north/: Chilika_north.dbf  Chilika_north.sbn  Chilika_north.sbx  Chilika_north.shp  Chilika_north.shx
notebooks/wetlandmapper_outputs/: chilika_wct_timeseries.csv
recipes/wetlandmapper/: meta.yaml
tests/: conftest.py  test_analysis.py  test_dynamics.py  test_gee_api.py  test_gee_live.py  test_indices.py  test_terrain.py  test_wct.py
wetlandmapper/: __init__.py  _version.py  analysis.py  dynamics.py  gee.py  indices.py  plotting.py  terrain.py  wct.py
